argo/downloads/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: downloads
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: "/config"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-config
