argo/downloads/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: downloads
spec:
  ports:
  - name: overseerr
    port: 5055
    protocol: TCP
  selector:
    app: overseerr
  type: ClusterIP
