argo/downloads/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: overseerr
  namespace: downloads
spec:
  ingressClassName: traefik-internal
  rules:
  - host: overseerr.spenceops.com
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 5055
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.spenceops.com
